--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body {
 </head>
 <body>
 
-<h1>My Website</h1>
-<p>A website created by me.</p>
+<h1>Victoria Gittins</h1>
+<p>This is about me and my PhD.</p>
 
 </body>
 </html>
