--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ body {
 
 <h1>Victoria Gittins</h1>
 <p>This is about me and my PhD.</p>
+  
+<a href="AboutMe.html">this is the linkos<\a>
 
 </body>
 </html>
