--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 <h1>Victoria Gittins</h1>
 <p>This is about me and my PhD.</p>
   
-<a href="AboutMe.html">this is the linkos<\a>
+<a href="AboutMe.html">this is the linkos</a>
 
 </body>
 </html>
