--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body {
 </head>
 <body>
 
-<h1>Victoria Gittins</h1>
-<p>This is about me and my PhD.</p>
+<h1>Bobby</h1>
+<p>Do not react.</p>
   
 <a href="AboutMe.html">maybe click this I think</a>
 
