--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,4 +1,5 @@
 <div class="header">
-  <h1>My Website</h1>
-  <p>A website created by me.</p>
+  <h1>You are the sabatour</h1>
+  <p>I will guide you through your whisper clip.</p>
+  <a href="Next.html">maybe click this I think</a>
 </div>
