--- a/NextNext.html
+++ b/NextNext.html
@@ -1,10 +1,5 @@
 <div class="header">
-.header {
-  padding: 80px; /* some padding */
-  text-align: center; /* center the text */
-  background: #1abc9c; /* green background */
-  color: white; /* white text color */
-}
+<body style="background-color:green;">
 
 /* Increase the font size of the <h1> element */
 .header h1 {
