--- a/NextNext.html
+++ b/NextNext.html
@@ -2,9 +2,7 @@
   <center>
 <body style="background-color:green;">
 
-/* Increase the font size of the <h1> element */
-.header h1 {
-  font-size: 900px;
+<h1 style="font-size:100vw">TRAPPED</h1>
 }
   <h1>TRAPPED!</h1>
  
