--- a/NextNext.html
+++ b/NextNext.html
@@ -2,7 +2,7 @@
   <center>
 <body style="background-color:green;">
 
-<h1 style="font-size:6vw; margin-top:40%">TRAPPED</h1>
+<h1 style="font-size:6vw; margin-top:40vh">TRAPPED!</h1>
 
  
 </div>
